--- a/satvis/notebooks/mad/mad_shared.ipynb
+++ b/satvis/notebooks/mad/mad_shared.ipynb
@@ -17,43 +17,21 @@
     "        image = image.rename('B1', 'B2', 'B3')\n",
     "        pb_99 = ['B1_p99', 'B2_p99', 'B3_p99']\n",
     "        pb_1 = ['B1_p1', 'B2_p1', 'B3_p1']\n",
-    "        img = ee.Image.rgb(image.select('B1'), image.select('B2'), image.select('B3'))\n",
+    "        img = ee.Image.rgb(\n",
+    "            image.select('B1'), image.select('B2'), image.select('B3'))\n",
     "    else:\n",
     "        image = image.rename('B1')\n",
     "        pb_99 = ['B1_p99']\n",
     "        pb_1 = ['B1_p1']\n",
     "        img = image.select('B1')\n",
-    "    percentiles = image.reduceRegion(ee.Reducer.percentile([1, 99]), maxPixels=1e11)\n",
+    "    percentiles = image.reduceRegion(\n",
+    "        ee.Reducer.percentile([1, 99]), maxPixels=1e11)\n",
     "    mx = percentiles.values(pb_99)\n",
     "    if centered:\n",
     "        mn = ee.Array(mx).multiply(-1).toList()\n",
     "    else:\n",
     "        mn = percentiles.values(pb_1)\n",
     "    map.addLayer(img, {'min': mn, 'max': mx}, name)\n",
-    "\n",
-    "def collect(aoi, t1a ,t1b, t2a, t2b):\n",
-    "    try:\n",
-    "        im1 = ee.Image( ee.ImageCollection(\"COPERNICUS/S2_HARMONIZED\")\n",
-    "                               .filterBounds(aoi)\n",
-    "                               .filterDate(ee.Date(t1a), ee.Date(t1b))\n",
-    "                               .filter(ee.Filter.contains(rightValue=aoi,leftField='.geo'))\n",
-    "                               .sort('CLOUDY_PIXEL_PERCENTAGE')\n",
-    "                               .first()\n",
-    "                               .clip(aoi) )\n",
-    "        im2 = ee.Image( ee.ImageCollection(\"COPERNICUS/S2_HARMONIZED\")\n",
-    "                               .filterBounds(aoi)\n",
-    "                               .filterDate(ee.Date(t2a), ee.Date(t2b))\n",
-    "                               .filter(ee.Filter.contains(rightValue=aoi,leftField='.geo'))\n",
-    "                               .sort('CLOUDY_PIXEL_PERCENTAGE')\n",
-    "                               .first()\n",
-    "                               .clip(aoi) )\n",
-    "        timestamp = im1.date().format('E MMM dd HH:mm:ss YYYY')\n",
-    "        print(timestamp.getInfo())\n",
-    "        timestamp = im2.date().format('E MMM dd HH:mm:ss YYYY')\n",
-    "        print(timestamp.getInfo())\n",
-    "        return (im1, im2)\n",
-    "    except Exception as e:\n",
-    "        print('Error: %s'%e)\n",
     "\n",
     "def covarw(image, weights=None, scale=20, maxPixels=1e10):\n",
     "    '''Return the centered image and its weighted covariance matrix.'''\n",
@@ -66,8 +44,8 @@
     "        weightsImage = image.multiply(ee.Image.constant(0)).add(weights)\n",
     "        means = image.addBands(weightsImage) \\\n",
     "                    .reduceRegion(ee.Reducer.mean().repeat(N).splitWeights(),\n",
-    "                                scale = scale,\n",
-    "                                maxPixels = maxPixels) \\\n",
+    "                                scale=scale,\n",
+    "                                maxPixels=maxPixels) \\\n",
     "                    .toArray() \\\n",
     "                    .project([1])\n",
     "        centered = image.toArray().subtract(means)\n",
@@ -93,7 +71,7 @@
     "        print('Error: %s'%e)\n",
     "\n",
     "def corr(cov):\n",
-    "    '''Transfrom covariance matrix to correlation matrix.'''\n",
+    "    '''Transform covariance matrix to correlation matrix.'''\n",
     "    # Diagonal matrix of inverse sigmas.\n",
     "    sInv = cov.matrixDiagonal().sqrt().matrixToDiag().matrixInverse()\n",
     "    # Transform.\n",
@@ -102,7 +80,7 @@
     "    return [list(map(trunc, corr[i])) for i in range(len(corr))]\n",
     "\n",
     "def geneiv(C,B):\n",
-    "    '''Return the eignvalues and eigenvectors of the generalized eigenproblem\n",
+    "    '''Return the eigenvalues and eigenvectors of the generalized eigenproblem\n",
     "       C*X = lambda*B*X'''\n",
     "    try:\n",
     "        C = ee.Array(C)\n",
@@ -123,57 +101,136 @@
     "    except Exception as e:\n",
     "        print('Error: %s'%e)\n",
     "\n",
-    "def mad_run(image1, image2, scale=20):\n",
-    "    '''The MAD transformation of two multiband images.'''\n",
+    "# Collect a Sentinel-2 image pair.\n",
+    "def collect(aoi, t1a ,t1b, t2a, t2b):\n",
     "    try:\n",
-    "        image = image1.addBands(image2)\n",
-    "        nBands = image.bandNames().length().divide(2)\n",
-    "        centeredImage,covarArray = covarw(image,scale=scale)\n",
-    "        bNames = centeredImage.bandNames()\n",
-    "        bNames1 = bNames.slice(0,nBands)\n",
-    "        bNames2 = bNames.slice(nBands)\n",
-    "        centeredImage1 = centeredImage.select(bNames1)\n",
-    "        centeredImage2 = centeredImage.select(bNames2)\n",
-    "        s11 = covarArray.slice(0, 0, nBands).slice(1, 0, nBands)\n",
-    "        s22 = covarArray.slice(0, nBands).slice(1, nBands)\n",
-    "        s12 = covarArray.slice(0, 0, nBands).slice(1, nBands)\n",
-    "        s21 = covarArray.slice(0, nBands).slice(1, 0, nBands)\n",
-    "        c1 = s12.matrixMultiply(s22.matrixInverse()).matrixMultiply(s21)\n",
-    "        b1 = s11\n",
-    "        c2 = s21.matrixMultiply(s11.matrixInverse()).matrixMultiply(s12)\n",
-    "        b2 = s22\n",
-    "        # Solution of generalized eigenproblems.\n",
-    "        lambdas, A = geneiv(c1, b1)\n",
-    "        _,       B = geneiv(c2, b2)\n",
-    "        rhos = lambdas.sqrt().project(ee.List([1]))\n",
-    "        # MAD variances.\n",
-    "        sigma2s = rhos.subtract(1).multiply(-2).toList()\n",
-    "        sigma2s = ee.Image.constant(sigma2s)\n",
-    "        # Ensure sum of positive correlations between X and U is positive.\n",
-    "        tmp = s11.matrixDiagonal().sqrt()\n",
-    "        ones = tmp.multiply(0).add(1)\n",
-    "        tmp = ones.divide(tmp).matrixToDiag()\n",
-    "        s = tmp.matrixMultiply(s11).matrixMultiply(A).reduce(ee.Reducer.sum(),[0]).transpose()\n",
-    "        A = A.matrixMultiply(s.divide(s.abs()).matrixToDiag())\n",
-    "        # Ensure positive correlation.\n",
-    "        tmp = A.transpose().matrixMultiply(s12).matrixMultiply(B).matrixDiagonal()\n",
-    "        tmp = tmp.divide(tmp.abs()).matrixToDiag()\n",
-    "        B = B.matrixMultiply(tmp)\n",
-    "        # Canonical and MAD variates as images.\n",
-    "        centeredImage1Array = centeredImage1.toArray().toArray(1)\n",
-    "        centeredImage2Array = centeredImage2.toArray().toArray(1)\n",
-    "        U = ee.Image(A.transpose()).matrixMultiply(centeredImage1Array) \\\n",
-    "                    .arrayProject([0]) \\\n",
-    "                    .arrayFlatten([bNames2])\n",
-    "        V = ee.Image(B.transpose()).matrixMultiply(centeredImage2Array) \\\n",
-    "                    .arrayProject([0]) \\\n",
-    "                    .arrayFlatten([bNames2])\n",
-    "        MAD = U.subtract(V)\n",
-    "        # Chi-square image.\n",
-    "        Z = MAD.pow(2) \\\n",
-    "               .divide(sigma2s) \\\n",
-    "               .reduce(ee.Reducer.sum())\n",
-    "        return (U, V, MAD, Z)\n",
+    "        im1 = ee.Image( ee.ImageCollection(\"COPERNICUS/S2_SR_HARMONIZED\")\n",
+    "                               .filterBounds(aoi)\n",
+    "                               .filterDate(ee.Date(t1a), ee.Date(t1b))\n",
+    "                               .filter(ee.Filter.contains(rightValue=aoi,leftField='.geo'))\n",
+    "                               .sort('CLOUDY_PIXEL_PERCENTAGE')\n",
+    "                               .first()\n",
+    "                               .clip(aoi) )\n",
+    "        im2 = ee.Image( ee.ImageCollection(\"COPERNICUS/S2_SR_HARMONIZED\")\n",
+    "                               .filterBounds(aoi)\n",
+    "                               .filterDate(ee.Date(t2a), ee.Date(t2b))\n",
+    "                               .filter(ee.Filter.contains(rightValue=aoi,leftField='.geo'))\n",
+    "                               .sort('CLOUDY_PIXEL_PERCENTAGE')\n",
+    "                               .first()\n",
+    "                               .clip(aoi) )\n",
+    "        timestamp = im1.date().format('E MMM dd HH:mm:ss YYYY')\n",
+    "        print(timestamp.getInfo())\n",
+    "        timestamp = im2.date().format('E MMM dd HH:mm:ss YYYY')\n",
+    "        print(timestamp.getInfo())\n",
+    "        return (im1, im2)\n",
+    "    except Exception as e:\n",
+    "        print('Error: %s'%e)\n",
+    "\n",
+    "\n",
+    "def chi2cdf(Z,df):\n",
+    "    '''Chi-square cumulative distribution function with df degrees of freedom.'''\n",
+    "    return ee.Image(Z.divide(2)).gammainc(ee.Number(df).divide(2))\n",
+    "\n",
+    "def imad(current,prev):\n",
+    "    '''Iterator function for iMAD.'''\n",
+    "    done =  ee.Number(ee.Dictionary(prev).get('done'))\n",
+    "    return ee.Algorithms.If(done, prev, imad1(current, prev))\n",
+    "\n",
+    "def imad1(current,prev):\n",
+    "    '''Iteratively re-weighted MAD.'''\n",
+    "    image = ee.Image(ee.Dictionary(prev).get('image'))\n",
+    "    Z = ee.Image(ee.Dictionary(prev).get('Z'))\n",
+    "    allrhos = ee.List(ee.Dictionary(prev).get('allrhos'))\n",
+    "    nBands = image.bandNames().length().divide(2)\n",
+    "    weights = chi2cdf(Z,nBands).subtract(1).multiply(-1)\n",
+    "    scale = ee.Dictionary(prev).getNumber('scale')\n",
+    "    niter = ee.Dictionary(prev).getNumber('niter')\n",
+    "    # Weighted stacked image and weighted covariance matrix.\n",
+    "    centeredImage, covarArray = covarw(image, weights, scale)\n",
+    "    bNames = centeredImage.bandNames()\n",
+    "    bNames1 = bNames.slice(0, nBands)\n",
+    "    bNames2 = bNames.slice(nBands)\n",
+    "    centeredImage1 = centeredImage.select(bNames1)\n",
+    "    centeredImage2 = centeredImage.select(bNames2)\n",
+    "    s11 = covarArray.slice(0, 0, nBands).slice(1, 0, nBands)\n",
+    "    s22 = covarArray.slice(0, nBands).slice(1, nBands)\n",
+    "    s12 = covarArray.slice(0, 0, nBands).slice(1, nBands)\n",
+    "    s21 = covarArray.slice(0, nBands).slice(1, 0, nBands)\n",
+    "    c1 = s12.matrixMultiply(s22.matrixInverse()).matrixMultiply(s21)\n",
+    "    b1 = s11\n",
+    "    c2 = s21.matrixMultiply(s11.matrixInverse()).matrixMultiply(s12)\n",
+    "    b2 = s22\n",
+    "    # Solution of generalized eigenproblems.\n",
+    "    lambdas, A = geneiv(c1, b1)\n",
+    "    _, B       = geneiv(c2, b2)\n",
+    "    rhos = lambdas.sqrt().project(ee.List([1]))\n",
+    "    # Test for convergence.\n",
+    "    lastrhos = ee.Array(allrhos.get(-1))\n",
+    "    done = rhos.subtract(lastrhos) \\\n",
+    "               .abs() \\\n",
+    "               .reduce(ee.Reducer.max(), ee.List([0])) \\\n",
+    "               .lt(ee.Number(0.0001)) \\\n",
+    "               .toList() \\\n",
+    "               .get(0)\n",
+    "    allrhos = allrhos.cat([rhos.toList()])\n",
+    "    # MAD variances.\n",
+    "    sigma2s = rhos.subtract(1).multiply(-2).toList()\n",
+    "    sigma2s = ee.Image.constant(sigma2s)\n",
+    "    # Ensure sum of positive correlations between X and U is positive.\n",
+    "    tmp = s11.matrixDiagonal().sqrt()\n",
+    "    ones = tmp.multiply(0).add(1)\n",
+    "    tmp = ones.divide(tmp).matrixToDiag()\n",
+    "    s = tmp.matrixMultiply(s11).matrixMultiply(A).reduce(ee.Reducer.sum(), [0]).transpose()\n",
+    "    A = A.matrixMultiply(s.divide(s.abs()).matrixToDiag())\n",
+    "    # Ensure positive correlation.\n",
+    "    tmp = A.transpose().matrixMultiply(s12).matrixMultiply(B).matrixDiagonal()\n",
+    "    tmp = tmp.divide(tmp.abs()).matrixToDiag()\n",
+    "    B = B.matrixMultiply(tmp)\n",
+    "    # Canonical and MAD variates.\n",
+    "    centeredImage1Array = centeredImage1.toArray().toArray(1)\n",
+    "    centeredImage2Array = centeredImage2.toArray().toArray(1)\n",
+    "    U = ee.Image(A.transpose()).matrixMultiply(centeredImage1Array) \\\n",
+    "                   .arrayProject([0]) \\\n",
+    "                   .arrayFlatten([bNames1])\n",
+    "    V = ee.Image(B.transpose()).matrixMultiply(centeredImage2Array) \\\n",
+    "                   .arrayProject([0]) \\\n",
+    "                   .arrayFlatten([bNames2])\n",
+    "    iMAD = U.subtract(V)\n",
+    "    # Chi-square image.\n",
+    "    Z = iMAD.pow(2) \\\n",
+    "              .divide(sigma2s) \\\n",
+    "              .reduce(ee.Reducer.sum())\n",
+    "    return ee.Dictionary({'done': done, 'scale': scale, 'niter': niter.add(1),\n",
+    "                          'image': image, 'allrhos': allrhos, 'Z': Z, 'iMAD': iMAD})\n",
+    "\n",
+    "def run_imad(aoi, image1, image2, assetId, scale=10, maxiter=100):\n",
+    "    try:\n",
+    "        N = image1.bandNames().length().getInfo()\n",
+    "        imadnames = ['iMAD'+str(i+1) for i in range(N)]\n",
+    "        imadnames.append('Z')\n",
+    "        # Maximum iterations.\n",
+    "        inputlist = ee.List.sequence(1, maxiter)\n",
+    "        first = ee.Dictionary({'done':0,\n",
+    "                            'scale': scale,\n",
+    "                            'niter': ee.Number(0),\n",
+    "                            'image': image1.addBands(image2),\n",
+    "                            'allrhos': [ee.List.sequence(1, N)],\n",
+    "                            'Z': ee.Image.constant(0),\n",
+    "                            'iMAD': ee.Image.constant(0)})\n",
+    "        # Iteration.\n",
+    "        result = ee.Dictionary(inputlist.iterate(imad, first))\n",
+    "        # Retrieve results.\n",
+    "        iMAD = ee.Image(result.get('iMAD')).clip(aoi)\n",
+    "        rhos = ee.String.encodeJSON(ee.List(result.get('allrhos')).get(-1))\n",
+    "        Z = ee.Image(result.get('Z'))\n",
+    "        niter = result.getNumber('niter')\n",
+    "        # Export iMAD and Z as a singe image, including rhos and number of iterations in properties.\n",
+    "        iMAD_export = ee.Image.cat(iMAD, Z).rename(imadnames).set('rhos', rhos, 'niter', niter)\n",
+    "        assexport = ee.batch.Export.image.toAsset(iMAD_export,\n",
+    "                        description='assetExportTask',\n",
+    "                        assetId=assetId, scale=scale, maxPixels=1e10)\n",
+    "        assexport.start()\n",
+    "        print('Exporting iMAD to %s\\n task id: %s'%(assetId, str(assexport.id)))\n",
     "    except Exception as e:\n",
     "        print('Error: %s'%e)\n"
    ]
